--- a/index.html
+++ b/index.html
@@ -68,14 +68,8 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                      <a class="btn btn-primary btn-icon btn-round btn-twitter" href="https://www.twitter.com/PrintPodAU"> 
-                      <i class="fa fa-twitter"></i>
-                    </a>
-
-                    <!--   <a class="nav-link" rel="tooltip" title="Like us on Facebook" data-placement="bottom" href="https://www.facebook.com/printpodAU" target="_blank">
-
-<i class="fa fa-facebook-square"></i>
-                            <p class="d-lg-none d-xl-none">Facebook</p> -->
+                    <a class="nav-link" rel="tooltip" title="Like us on Facebook" data-placement="bottom" href="https://www.facebook.com/printpodAU" target="_blank"> <i class="fa fa-facebook-square"></i>
+                            <p class="d-lg-none d-xl-none">Facebook</p>
                         </a>
                     </li>
                     <li class="nav-item">
@@ -181,8 +175,8 @@
                                 <p class="category text-info">Technology and Data</p>
                                 <p class="description">Actuarial Studies and Economics student, majoring in Data Science </p>
                                 <a href="https://www.twitter.com/vishnuupanickar" class="btn btn-primary btn-icon btn-round"><i class="fa fa-twitter"></i></a>
-                                <a href="https://www.linkedin.com/in/vishnuupanickar" class="btn btn-primary btn-icon btn-round"><i class="fa fa-linkedin"></i></a>
-                                <a href="mailto:vishnuu@printpod.co" class="btn btn-primary btn-icon btn-round"><i class="fa fa-envelope"></i></a>
+                                <a href="https://www.linkedin.com/in/vishnuupanickar" class="btn btn-primary2 btn-icon btn-round"><i class="fa fa-linkedin"></i></a>
+                                <a href="mailto:vishnuu@printpod.co" class="btn btn-primary3 btn-icon btn-round"><i class="fa fa-envelope"></i></a>
                             </div>
                         </div>
                         <div class="col-md-4">
@@ -193,8 +187,8 @@
                                 <p class="description"> Medical Science student, majoring in Pharmacology</p>
                                 <a href="https://www.twitter.com/PrintPodAU" class="btn btn-primary btn-icon
                                 btn-round"><i class="fa fa-twitter"></i></a>
-                                <a href="https://www.linkedin.com/in/rithvik-badinedi-94969b116/" class="btn btn-primary btn-icon btn-round"><i class="fa fa-linkedin"></i></a>
-                                <a href="mailto:rithvik@printpod.co" class="btn btn-primary btn-icon btn-round"><i class="fa fa-envelope"></i></a>
+                                <a href="https://www.linkedin.com/in/rithvik-badinedi-94969b116/" class="btn btn-primary2 btn-icon btn-round"><i class="fa fa-linkedin"></i></a>
+                                <a href="mailto:rithvik@printpod.co" class="btn btn-primary3 btn-icon btn-round"><i class="fa fa-envelope"></i></a>
                             </div>
                         </div>
                         <div class="col-md-4">
@@ -204,8 +198,8 @@
                                 <p class="category text-info"> Operations and Finance </p>
                                 <p class="description"> Aeronautical Engineering and Commerce student, majoring in Finance </p>
                                  <a href="https://www.twitter.com/PrintPodAU" class="btn btn-primary btn-icon btn-round"><i class="fa fa-twitter"></i></a>
-                                <a href="https://www.linkedin.com/in/chris-basilio/" class="btn btn-primary btn-icon btn-round"><i class="fa fa-linkedin"></i></a></i></a>
-                                <a href="mailto:chris@printpod.co" class="btn btn-primary btn-icon btn-round"><i class="fa fa-envelope"></i></a>
+                                <a href="https://www.linkedin.com/in/chris-basilio/" class="btn btn-primary2 btn-icon btn-round"><i class="fa fa-linkedin"></i></a></i></a>
+                                <a href="mailto:chris@printpod.co" class="btn btn-primary3 btn-icon btn-round"><i class="fa fa-envelope"></i></a>
                             </div>
                         </div>
                     </div>
