--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
     <!-- CSS Files -->
     <link href="./assets/css/bootstrap.min.css" rel="stylesheet" />
     <link href="./assets/css/now-ui-kit.css?v=1.1.0" rel="stylesheet" />
-
     <!-- CSS Just for demo purpose, don't include it in your project -->
     <!-- <link href="./assets/css/demo.css" rel="stylesheet" />-->
 
@@ -51,7 +50,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./webapp/print.html" target="_blank">
+                        <a class="nav-link" href="javascript:void(0)" target="_blank">
                             <i class="now-ui-icons users_circle-08"></i>
                             <p>LOGIN / SIGNUP</p>
                         </a>
@@ -105,6 +104,24 @@
 <button class="btn btn-neutral" data-toggle="modal" data-target="#myModal">
 <b>FOR ADVERTISERS </b></button>
 
+<!-- Modal Core -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+      </div>
+      <div class="modal-body">
+        Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth. Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default btn-simple" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-info btn-simple">Save</button>
+      </div>
+    </div>
+  </div>
+</div>
 
             </div>
             
@@ -171,6 +188,7 @@
             </div>
         </div> 
 -->
+
         <div class="section section-team text-center">
             <div class="container">
                 <h2 class="title">Meet the team</h2>
