--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <body class="landing-page sidebar-collapse">
     <!-- Navbar -->
 <!--    <nav class="navbar navbar-expand-lg bg-primary fixed-top navbar-transparent " color-on-scroll="400"> -->
-    <nav class="navbar navbar-expand-lg bg-primary fixed-top " color-on-scroll="21232a">
+    <nav class="navbar navbar-expand-lg bg-primary fixed-top navbar-transparent" color-on-scroll="21232a">
         <div class="container">
             <div class="navbar-translate">
                 <a class="navbar-brand" href="" rel="tooltip" title="If you're a student, you'll love us!" data-placement="bottom" target="_blank">
@@ -89,12 +89,6 @@
                     <h4> Coming first to UNSW</h4>
                     <button class="btn btn-neutral" href=""> <b> FOR STUDENTS </b> </button>
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-
-                    <!-- Mailchimp Form -->
-
-                    <script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/signup-forms/popup/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script><script type="text/javascript">require(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us16.list-manage.com","uuid":"7938d576e998cefc2643d9d6e","lid":"1b2a9a67d3"}) })
-                    </script>
-
 
 
                    <!-- Original Advertisers button
