--- a/webapp/print.html
+++ b/webapp/print.html
@@ -76,16 +76,16 @@
                     <div id="myCarousel" class="carousel slide carousel-fade" data-ride="carousel">
                         <div class="carousel-inner" role="listbox">
                             <div class="item active">
-                                <img class="img-responsive center-block" src="img/step1.png" alt="step1">
+                                <img class="img-responsive center-block" src="img/logo2.png" alt="step1">
                                 <div class="item-content">
-                                    <h3>Lorem ipsum dolor sit amet</h3>
+                                    <h3>Free printing for everyone</h3>
                                     <p>Consectetur adipiscing elit</p>
                                     <p>Phasellus orci dolor</p>
                                     <p>dapibus suscipit quam</p>
                                 </div>
                             </div>
                             <div class="item">
-                                <img class="img-responsive center-block" src="img/step2.png" alt="step2">
+                                <img class="img-responsive center-block" src="img/logo2.png" alt="step2">
                                 <div class="item-content">
                                     <h3>Pellentesque tincidunt</h3>
                                     <p>Laoreet placerat justo congue vulputate</p>
@@ -94,7 +94,7 @@
                                 </div>
                             </div>
                             <div class="item">
-                                <img class="img-responsive center-block" src="img/step3.png" alt="step3">
+                                <img class="img-responsive center-block" src="img/logo2.png" alt="step3">
                                 <div class="item-content">
                                     <h3> Proin sed leo sodales</h3>
                                     <p>ultricies posuere leo</p>
