--- a/webapp/print.html
+++ b/webapp/print.html
@@ -232,7 +232,7 @@
     
     <script src="https://www.gstatic.com/firebasejs/5.0.3/firebase.js"></script>
     <script src="login.js"></script>
-
+    <script src="https://www.gstatic.com/firebasejs/5.0.3/firebase-firestore.js"></script>
 
 
     <script src="node_modules/jquery/dist/jquery.min.js "></script>
