--- a/webapp/print.html
+++ b/webapp/print.html
@@ -135,13 +135,13 @@
 
                             <form form data-feedback='{"success": "fa-check", "error": "fa-times"}'>
                                 <div class="col-lg-10 col-lg-offset-1 col-lg-offset-right-1 col-md-10 col-md-offset-1 col-md-offset-right-1 col-sm-12 col-xs-12 pull-right ">
-
+ <!--
                                     <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label form-group has-feedback">
                                         <input type="text" name="fname" id="fname" class="mdl-textfield__input" />
                                         <label class="mdl-textfield__label " for="fullName">Full Name</label>
                                         <span class="form-control-feedback" aria-hidden="true" id="fname1"></span>
                                     </div>
-                                    <!--
+          
                                     <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
                                         <input class="mdl-textfield__input " type="text" id="fullName ">
                                         <label class="mdl-textfield__label " for="fullName ">Full Name</label>
@@ -150,18 +150,18 @@
                                         <input class="mdl-textfield__input " type="text" id="emailAddress">
                                         <label class="mdl-textfield__label " for="emailAddress">Email Address</label>
                                     </div>
-
+ <!--
                                     <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
                                         <input class="mdl-textfield__input " type="text " pattern="[0-9]{6,8}" id="studentID">
                                         <label class="mdl-textfield__label " for="studentID">Student ID (just numbers)</label>
                                         <span class="mdl-textfield__error ">Please enter your student ID numbers only, without the 'z'</span>
                                     </div>
-
                                     <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label ">
                                         <input class="mdl-textfield__input " type="text" pattern="[0-9]{10}" id="mobileNumber">
                                         <label class="mdl-textfield__label " for="mobileNumber ">Mobile Number</label>
                                         <span class="mdl-textfield__error ">Input is not a number!</span>
                                     </div>
+-->
 
                                     <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label ">
                                         <input class="mdl-textfield__input " type="password " id="password">
@@ -173,7 +173,7 @@
                                 <span class="mdl-checkbox__label ">I have read and accept the <a href="# ">Terms of Use</a> and <a href="# ">Privacy Policy</a></span>
                                 </label>
 
-                                    <button class="btn lt-register-btn " id='register-btn'> register now<i class="icon-right pull-right "></i></button>
+                                    <button class="btn lt-register-btn " id='register-btn'>register now<i class="icon-right pull-right "></i></button>
                                 </div>
                             </form>
                             <!--register form-->
@@ -185,14 +185,14 @@
 
                                 <div class="col-lg-10 col-lg-offset-1 col-lg-offset-right-1 col-md-10 col-md-offset-1 col-md-offset-right-1 col-sm-12 col-xs-12 pull-right ">
                                     <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                                        <input class="mdl-textfield__input" type="text" id="emailAddress">
+                                        <input class="mdl-textfield__input" type="text" id="emailAddress2">
                                         <label class="mdl-textfield__label" for="emailAddress">Email Address</label>
                                     </div>
                                 </div>
 
                                 <div class="col-lg-10 col-lg-offset-1 col-lg-offset-right-1 col-md-10 col-md-offset-1 col-md-offset-right-1 col-sm-12 col-xs-12 pull-right ">
                                     <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                                        <input class="mdl-textfield__input" type="password" id="password">
+                                        <input class="mdl-textfield__input" type="password" id="password2">
                                         <label class="mdl-textfield__label" for="password">Password</label>
                                     </div>
                                 </div>
